--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.60MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
-  - {name: 🇺🇸 美国-4.11MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
-  - {name: 🇨🇳 中国-2.31MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: 34.217.102.91, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: iesei1ei.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: iesei1ei.com}}
-  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 91655bf0-db7a-11ec-9fe0-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 乌克兰-2.39MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 中国-309.4KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 乌克兰-198.8KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
+  - {name: 🇨🇳 中国-390.5KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇨🇳 台湾-1.79MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 乌克兰-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 乌克兰-198.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 乌克兰-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 乌克兰-198.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 乌克兰-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 乌克兰-198.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 乌克兰-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 乌克兰-198.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 乌克兰-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 乌克兰-198.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 乌克兰-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 乌克兰-198.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.31MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 乌克兰-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
+      - 乌克兰-198.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
