--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-751.9KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
   - {name: 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 乌克兰-198.8KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
-  - {name: 🇨🇳 中国-390.5KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 台湾-1.79MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 乌克兰-216.7KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇨🇳 中国-262.4KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇨🇳 台湾-1.13MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
-      - 乌克兰-198.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
+      - 乌克兰-216.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
-      - 乌克兰-198.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
+      - 乌克兰-216.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
-      - 乌克兰-198.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
+      - 乌克兰-216.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
-      - 乌克兰-198.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
+      - 乌克兰-216.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
-      - 乌克兰-198.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
+      - 乌克兰-216.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
-      - 乌克兰-198.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
+      - 乌克兰-216.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
-      - 乌克兰-198.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.79MB/s(Youtube:不良林)
+      - 乌克兰-216.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
