--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,8 +5,8 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
   - {name: 🇨🇳 中国-751.9KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 乌克兰-216.7KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
   - {name: 🇨🇳 中国-262.4KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
   - {name: 🇨🇳 台湾-1.13MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
@@ -16,8 +16,8 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
       - 乌克兰-216.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
@@ -26,8 +26,8 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
       - 乌克兰-216.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
@@ -37,8 +37,8 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
       - 乌克兰-216.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
@@ -53,8 +53,8 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
       - 乌克兰-216.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
@@ -63,8 +63,8 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
       - 乌克兰-216.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
@@ -74,8 +74,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
       - 乌克兰-216.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
@@ -94,8 +94,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.03MB/s(Youtube:不良林)
       - 乌克兰-216.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
