--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,72 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
-  - {name: 🇨🇳 中国-751.9KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 乌克兰-216.7KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 中国-262.4KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 台湾-1.13MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.85MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
+  - {name: 🇨🇭 瑞士-1.49MB/s(Youtube:不良林), server: 185.126.116.125, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇨🇳 中国-415.9KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-591.7KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 乌克兰-216.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 乌克兰-216.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 乌克兰-216.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 乌克兰-216.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 乌克兰-216.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 乌克兰-216.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-751.9KB/s(Youtube:不良林)
-      - 乌克兰-216.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
