--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -9,6 +9,7 @@ proxies:
   - {name: 🇨🇭 瑞士-1.49MB/s(Youtube:不良林), server: 185.126.116.125, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
   - {name: 🇨🇳 中国-415.9KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
   - {name: 🇨🇳 中国-591.7KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -19,6 +20,7 @@ proxy-groups:
       - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
       - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -28,6 +30,7 @@ proxy-groups:
       - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
       - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,6 +41,7 @@ proxy-groups:
       - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
       - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,6 +56,7 @@ proxy-groups:
       - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
       - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -61,6 +66,7 @@ proxy-groups:
       - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
       - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -71,6 +77,7 @@ proxy-groups:
       - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
       - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -90,6 +97,7 @@ proxy-groups:
       - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
       - 🇨🇳 中国-415.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
