--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,8 +7,8 @@ external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
   - {name: 🇨🇳 中国-267.5KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-591.7KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-556.5KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 乌克兰-496.4KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,8 +17,8 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.5KB/s(Youtube:不良林)
+      - 乌克兰-496.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -26,8 +26,8 @@ proxy-groups:
     proxies:
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.5KB/s(Youtube:不良林)
+      - 乌克兰-496.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -36,8 +36,8 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.5KB/s(Youtube:不良林)
+      - 乌克兰-496.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -50,8 +50,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.5KB/s(Youtube:不良林)
+      - 乌克兰-496.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -59,8 +59,8 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.5KB/s(Youtube:不良林)
+      - 乌克兰-496.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -69,8 +69,8 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.5KB/s(Youtube:不良林)
+      - 乌克兰-496.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -88,8 +88,8 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-591.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.5KB/s(Youtube:不良林)
+      - 乌克兰-496.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
