--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,60 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-516.4KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇨🇳 台湾-1.65MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 阿联酋-321.9KB/s(Youtube:不良林), server: 217.138.193.6, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 阿联酋-366.6KB/s(Youtube:不良林), server: 217.138.193.6, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 阿联酋-400.4KB/s(Youtube:不良林), server: 217.138.193.6, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 阿联酋-218.8KB/s(Youtube:不良林), server: 217.138.193.6, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇰🇷 韩国-1.25MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-516.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 阿联酋-321.9KB/s(Youtube:不良林)
+      - 阿联酋-366.6KB/s(Youtube:不良林)
+      - 阿联酋-400.4KB/s(Youtube:不良林)
+      - 阿联酋-218.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-516.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 阿联酋-321.9KB/s(Youtube:不良林)
+      - 阿联酋-366.6KB/s(Youtube:不良林)
+      - 阿联酋-400.4KB/s(Youtube:不良林)
+      - 阿联酋-218.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-516.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 阿联酋-321.9KB/s(Youtube:不良林)
+      - 阿联酋-366.6KB/s(Youtube:不良林)
+      - 阿联酋-400.4KB/s(Youtube:不良林)
+      - 阿联酋-218.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-516.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-516.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 阿联酋-321.9KB/s(Youtube:不良林)
+      - 阿联酋-366.6KB/s(Youtube:不良林)
+      - 阿联酋-400.4KB/s(Youtube:不良林)
+      - 阿联酋-218.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-516.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 阿联酋-321.9KB/s(Youtube:不良林)
+      - 阿联酋-366.6KB/s(Youtube:不良林)
+      - 阿联酋-400.4KB/s(Youtube:不良林)
+      - 阿联酋-218.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-516.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 阿联酋-321.9KB/s(Youtube:不良林)
+      - 阿联酋-366.6KB/s(Youtube:不良林)
+      - 阿联酋-400.4KB/s(Youtube:不良林)
+      - 阿联酋-218.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -74,8 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-516.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.65MB/s(Youtube:不良林)
+      - 阿联酋-321.9KB/s(Youtube:不良林)
+      - 阿联酋-366.6KB/s(Youtube:不良林)
+      - 阿联酋-400.4KB/s(Youtube:不良林)
+      - 阿联酋-218.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
